PROD/deploy/apisix-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisix-admin-api
  namespace: cro-apisix-uat
  labels:
    app: apisix
spec:
  selector:
    app: apisix
  ports:
    - name: admin
      port: 9180
      targetPort: 9180
      protocol: TCP
  type: ClusterIP
